--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,16 +1,19 @@
 <div class="content about-content center-stage">
-  <div class="main">
-    <h1>About</h1>
-    <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
-  </div>
-  <div class="content-wrapper" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
-    <p>
-      I am a frontend developer with full stack experience and also an artist and designer by passion. As a developer I mostly
-      work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I love creating
-      my own designs and open source components and always keep me involved in proof of concepts and projects on latest technologies.<br/><br/>      Designing has always been with me even before I started loving technology. I use to design products as well along with
-      portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are delightful
-      and accessible.
-    </p>
+  <h1>About</h1>
+  <div class="content-wrapper clearfix" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+    <h2 class="main">Hi! I am Jayabratha Saha, friends call me Jay.</h2>
+    <div class="feature-content">
+      <p>
+        I am a frontend developer with full stack experience and also an artist and designer by passion. As a developer I mostly
+        work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I love creating
+        my own designs and open source components and always keep me involved in proof of concepts and projects on latest
+        technologies.
+        <br/>
+        <br/> Designing has always been with me even before I started loving technology. I use to design products as well along
+        with portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are delightful
+        and accessible.
+      </p>
+    </div>
   </div>
   <section class="my-skills" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false (enteredViewport)="animateSkills()">
     <div class="skill-container">
@@ -51,9 +54,9 @@
                 <h3>Sapient Global Markets</h3>
                 <div class="time">Oct, 2016 - present</div>
                 <p>
-                  I worked as Senior Interactive Developer for Wells Fargo Bank.
-                  I used this opportunity to design and develop apps that qualify the web accessibilty specifications 
-                  and fulfill the user experience guidelines. Here I worked on custom web widgets based on YUI and Angular SPAs.
+                  I worked as Senior Interactive Developer for Wells Fargo Bank. I used this opportunity to design and develop apps that qualify
+                  the web accessibilty specifications and fulfill the user experience guidelines. Here I worked on custom
+                  web widgets based on YUI and Angular SPAs.
                 </p>
               </div>
             </div>
@@ -61,19 +64,17 @@
           <li>
             <div #expItem class="exp-wrapper clearfix">
               <div class="logo-wrapper col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                  <img src="assets/tcs-logo.png" />
+                <img src="assets/tcs-logo.png" />
               </div>
               <div class="exp-summary col-xs-8 col-sm-8 col-md-8 col-lg-8">
-                  <h3>Tata Consultancy Services</h3>
-                  <div class="time">March, 2012 - Sep, 2016</div>
-                  <p>
-                    I started my carreer with TCS as a Systems Engineer. During my first 2 years I worked 
-                    as Java Developer but worked on multiple technologies inclusing PHP, shell scripting, 
-                    frontend stuff and lot more ebing on a support and enhancement project with DexMedia.
-                    Due to interest in design and frontend stuff I choose to move to a more of a frontend
-                    role and worked as a IT Analyst for Pearson where I worked on mutiple Angular and OOJS
-                    projects.
-                  </p>
+                <h3>Tata Consultancy Services</h3>
+                <div class="time">March, 2012 - Sep, 2016</div>
+                <p>
+                  I started my carreer with TCS as a Systems Engineer. During my first 2 years I worked as Java Developer but worked on multiple
+                  technologies inclusing PHP, shell scripting, frontend stuff and lot more ebing on a support and enhancement
+                  project with DexMedia. Due to interest in design and frontend stuff I choose to move to a more of a frontend
+                  role and worked as a IT Analyst for Pearson where I worked on mutiple Angular and OOJS projects.
+                </p>
               </div>
             </div>
           </li>
