--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,6 +1,6 @@
 <div class="content blog-content center-stage">
-  <div class="main">
-    <h1>Blog</h1>
-    <h2>My blogs will appear here</h2>
+  <h1>Blog</h1>
+  <div class="content-wrapper" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+    <h2 class="main">My blogs will appear here</h2>
   </div>
 </div>
