--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="content projects-content center-stage">
-  <div class="main">
-    <h1>Projects</h1>
-    <h2>My tech projects will come up here</h2>
+  <h1>Projects</h1>
+  <div class="content-wrapper" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+    <h2 class="main">My tech projects will come up here</h2>
   </div>
 </div>
