--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -6,26 +6,37 @@
     width: 33.3%;
 }
 
+.content section {
+    padding: 20px 0;
+    margin: 0 auto;
+}
+
 .content section h2 {
     color: #454545;
     font-family: Playfair Display;
     padding-left: 0;
     padding-top: 10px;
     border-bottom: thin dotted;
-    margin-bottom: 1em;
+}
+
+.content section p {
+    padding: 20px 0;
+}
+
+.feature-content p {
+    padding-left: 20px;
 }
 
 p.sub_desc {
     padding: 2em 0.5em 1em;
 }
 
-section {
-    padding: 30px 0;
-    margin: 50px auto;
-}
-
 .skill-container {
     position: relative;
+}
+
+.skill-tiles-container {
+    padding: 10px 0;
 }
 
 .skill-list {
@@ -65,6 +76,10 @@ section {
 .skill-wrapper.html {
     background-position: 0 -600px;
     background-color: #ff5426;
+}
+
+.logo-wrapper {
+    padding: 15px 0;
 }
 
 .exp-wrapper {
