--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,27 +1,19 @@
 <div class="content art-content center-stage">
-  <div>
-    <div class="main">
-      <h1>Art</h1>
-      <h2>A collection of my sketches and paintings</h2>
+  <h1>Art</h1>
+  <div class="content-wrapper" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+    <h2 class="main">A collection of my sketches and paintings</h2>
+    <div class="feature-content">
+      
     </div>
-    <div class="content-wrapper">
-      <div class="side-info">
+    <div class="list-wrapper" appImageOnLoad [imageItems]="imageItems" (progress)="updateProgress($event)" (complete)="onLoadComplete($event)">
+      <div class="loading-icon" [ngClass]="{'animate': isLoading}">
       </div>
-      <div class="list-wrapper" 
-           appImageOnLoad 
-           [imageItems]="imageItems" 
-           (progress)="updateProgress($event)" 
-           (complete)="onLoadComplete($event)">
-        <div class="loading-icon" [ngClass]="{'animate': isLoading}">
-        </div>
-        <ul class="art-list clearfix">
-          <li id="{{item.id}}" *ngFor="let item of artList; let first = first" 
-              [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPotraitMode,
+      <ul class="art-list clearfix">
+        <li id="{{item.id}}" *ngFor="let item of artList; let first = first" [ngClass]="{'potrait col-xs-4 col-sm-3 col-md-3 col-lg-3': item.isPotraitMode,
                        'landscape col-xs-8 col-sm-6 col-md-6 col-lg-6': !item.isPotraitMode}">
-            <img #imgItem title="{{item.title}}" alt="{{item.alt}}" src="{{item.url}}" />
-          </li>
-        </ul>
-      </div>
+          <img #imgItem title="{{item.title}}" alt="{{item.alt}}" src="{{item.url}}" />
+        </li>
+      </ul>
     </div>
   </div>
 </div>
