Fix for Firefox

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="content about-content center-stage">
   <h1>About</h1>
-  <div class="content-wrapper clearfix" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <div class="content-wrapper clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <h2 class="main">Hi! I am Jayabratha Saha, friends call me Jay.</h2>
     <div class="feature-content">
       <p>
@@ -15,7 +15,7 @@
       </p>
     </div>
   </div>
-  <section class="my-skills" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false (enteredViewport)="animateSkills()">
+  <section class="my-skills below-view" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false (enteredViewport)="animateSkills()">
     <div class="skill-container">
       <h2>Tech Skills</h2>
       <div class="skill-tiles-container">
@@ -34,7 +34,7 @@
           </li>
         </ul>
       </div>
-      <p class="sub-desc" appJsOnscroll [viewportCheck]=true [padding]=500 [checkAboveView]=false>
+      <p class="sub-desc below-view" appJsOnscroll [viewportCheck]=true [padding]=500 [checkAboveView]=false>
         I am current working on MEAN stack technologies specializing on front-end including TypeScript, Angular along with base web
         technologies. I have also experience in working with Ionic and Firebase.
       </p>
