--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,6 +1,6 @@
 <div class="content art-content center-stage">
   <h1>Art</h1>
-  <div class="content-wrapper" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <div class="content-wrapper below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <h2 class="main">A collection of my sketches and paintings</h2>
     <div class="feature-content">
       
