--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,5 +2,17 @@
   <h1>Contact</h1>
   <div class="content-wrapper below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <h2 class="main">Send me an email here</h2>
+    <div class="feature-content">
+      <form class="contact-form container">
+        <input type="text" class="first-name col-md-6" placeholder="First Name" />
+        <input type="text" class="last-name col-md-6" placeholder="Last Name" />
+        <input type="email" class="email col-md-12" placeholder="Email" />
+        <textarea class="message col-md-12" placeholder="Type in your message"></textarea>
+        <div class="button-wrapper">
+          <div class="background"></div>
+          <button class="submit-contact" type="submit">SEND EMAIL</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
