--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,10 +4,26 @@
     <h2 class="main">Send me an email here</h2>
     <div class="feature-content">
       <form class="contact-form container">
-        <input type="text" class="first-name col-md-6" placeholder="First Name" />
-        <input type="text" class="last-name col-md-6" placeholder="Last Name" />
-        <input type="email" class="email col-md-12" placeholder="Email" />
-        <textarea class="message col-md-12" placeholder="Type in your message"></textarea>
+        <div class="input-wrapper col-md-6">
+            <label for="firstName">First Name</label>
+            <input id="firstName" name="firstName" type="text" class="first-name" placeholder="First Name" />
+            <div class="border-highlight"></div>
+        </div>
+        <div class="input-wrapper col-md-6">
+            <label for="lastName">Last Name</label>
+            <input id="lastName" name="lastName" type="text" class="last-name" placeholder="Last Name" />
+            <div class="border-highlight"></div>
+        </div>
+        <div class="input-wrapper col-md-12">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" class="email" placeholder="Email" />
+            <div class="border-highlight"></div>
+        </div>
+        <div class="input-wrapper message-wrapper col-md-12">
+            <label for="mesage">Your Message</label>
+            <textarea id="message" name="message" class="message" placeholder="Type in your message"></textarea>
+            <div class="border-highlight"></div>
+        </div>       
         <div class="button-wrapper">
           <div class="background"></div>
           <button class="submit-contact" type="submit">SEND EMAIL</button>
