--- a/src/icon-styles.css
+++ b/src/icon-styles.css
@@ -1,19 +1,19 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "font-icons";
-  src:url("assets/fonts/font-icons.eot");
-  src:url("assets/fonts/font-icons.eot?#iefix") format("embedded-opentype"),
-    url("assets/fonts/font-icons.woff") format("woff"),
-    url("assets/fonts/font-icons.ttf") format("truetype"),
-    url("assets/fonts/font-icons.svg#font-icons") format("svg");
+  font-family: "untitled-font-2";
+  src:url("assets/fonts/untitled-font-2.eot");
+  src:url("assets/fonts/untitled-font-2.eot?#iefix") format("embedded-opentype"),
+    url("assets/fonts/untitled-font-2.woff") format("woff"),
+    url("assets/fonts/untitled-font-2.ttf") format("truetype"),
+    url("assets/fonts/untitled-font-2.svg#untitled-font-2") format("svg");
   font-weight: normal;
   font-style: normal;
 
 }
 
 [data-icon]:before {
-  font-family: "font-icons" !important;
+  font-family: "untitled-font-2" !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -27,7 +27,7 @@
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "font-icons" !important;
+  font-family: "untitled-font-2" !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
@@ -46,21 +46,6 @@
 }
 .icon-android-add:before {
   content: "\63";
-}
-.icon-android-done:before {
-  content: "\64";
-}
-.icon-android-close:before {
-  content: "\65";
-}
-.icon-android-calendar:before {
-  content: "\66";
-}
-.icon-chevron-right:before {
-  content: "\67";
-}
-.icon-chevron-left:before {
-  content: "\68";
 }
 .icon-load-c:before {
   content: "\6a";
@@ -133,4 +118,157 @@
 }
 .icon-ios-location:before {
   content: "\46";
+}
+.icon-ios-arrow-right:before {
+  content: "\47";
+}
+.icon-ios-arrow-left:before {
+  content: "\48";
+}
+.icon-chevron-left:before {
+  content: "\68";
+}
+.icon-chevron-right:before {
+  content: "\67";
+}
+.icon-android-calendar:before {
+  content: "\66";
+}
+.icon-android-close:before {
+  content: "\65";
+}
+.icon-android-done:before {
+  content: "\64";
+}
+.icon-paper-airplane:before {
+  content: "\49";
+}
+.icon-ios-arrow-thin-left:before {
+  content: "\4a";
+}
+.icon-ios-arrow-thin-right:before {
+  content: "\4b";
+}
+.icon-ios-arrow-thin-up:before {
+  content: "\4c";
+}
+.icon-ios-arrow-thin-down:before {
+  content: "\4d";
+}
+.icon-ios-location-outline:before {
+  content: "\4e";
+}
+.icon-ios-heart:before {
+  content: "\4f";
+}
+.icon-ios-heart-outline:before {
+  content: "\50";
+}
+.icon-ios-email:before {
+  content: "\51";
+}
+.icon-ios-email-outline:before {
+  content: "\52";
+}
+.icon-ios-plus-empty:before {
+  content: "\53";
+}
+.icon-ios-search:before {
+  content: "\54";
+}
+.icon-ios-telephone-outline:before {
+  content: "\55";
+}
+.icon-ios-telephone:before {
+  content: "\56";
+}
+.icon-social-instagram-outline:before {
+  content: "\57";
+}
+.icon-social-linkedin-outline:before {
+  content: "\58";
+}
+.icon-social-whatsapp-outline:before {
+  content: "\59";
+}
+.icon-social-html5-outline:before {
+  content: "\5a";
+}
+.icon-social-html5:before {
+  content: "\30";
+}
+.icon-social-css3:before {
+  content: "\31";
+}
+.icon-social-css3-outline:before {
+  content: "\32";
+}
+.icon-social-angular:before {
+  content: "\33";
+}
+.icon-social-angular-outline:before {
+  content: "\34";
+}
+.icon-social-javascript:before {
+  content: "\35";
+}
+.icon-social-javascript-outline:before {
+  content: "\36";
+}
+.icon-ios-printer-outline:before {
+  content: "\37";
+}
+.icon-ios-printer:before {
+  content: "\38";
+}
+.icon-ios-help-outline:before {
+  content: "\39";
+}
+.icon-ios-checkmark-outline:before {
+  content: "\21";
+}
+.icon-ios-close-outline:before {
+  content: "\22";
+}
+.icon-ios-chatboxes-outline:before {
+  content: "\23";
+}
+.icon-ios-chatboxes:before {
+  content: "\24";
+}
+.icon-ios-checkmark:before {
+  content: "\25";
+}
+.icon-ios-close:before {
+  content: "\26";
+}
+.icon-ios-information-outline:before {
+  content: "\27";
+}
+.icon-ios-more:before {
+  content: "\28";
+}
+.icon-ios-star-outline:before {
+  content: "\29";
+}
+.icon-ios-star:before {
+  content: "\2a";
+}
+.icon-resize-full:before {
+  content: "\2b";
+}
+.icon-android-send:before {
+  content: "\2c";
+}
+.icon-android-search:before {
+  content: "\2d";
+}
+.icon-arrow-resize:before {
+  content: "\2e";
+}
+.icon-arrow-expand:before {
+  content: "\2f";
+}
+.icon-arrow-shrink:before {
+  content: "\3a";
 }
