--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -152,16 +152,19 @@ ul.site-nav-list li.show {
 
 .act-icon {
     font-size: 2em;
-    height: 19px;
+    height: 30px;
     width: 48px;
     overflow: hidden;
     display: inline-block;
+    margin-top: -3px;
+    margin-bottom: -8px;
 }
 
 .act-icon:before {
     position: relative;
-    top: -9px;
+    top: -6px;
     left: 0;
+    transition: left 0.5s;
     -webkit-transition: left 0.5s;
     -moz-transition: left 0.5s;
     transition: left 0.5s;
