--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
   <div class="content-wrapper below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
     <h2 class="main">Send me an email here</h2>
     <div class="feature-content">
-      <form class="contact-form container" [ngClass]="{'show-error': showError}" (ngSubmit)="onSubmit(contactForm.form.valid)" #contactForm="ngForm">
+      <form class="contact-form container" [ngClass]="{'show-error': showError}" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
         <div class="input-wrapper col-md-6">
             <label for="firstName">First Name</label>
             <input id="firstName" name="firstName" type="text" class="first-name" placeholder="First Name" [(ngModel)]="messageData.firstName" required />
@@ -26,7 +26,10 @@
         </div>       
         <div class="button-wrapper">
           <div class="background"></div>
-          <button type="submit" class="submit-contact" type="submit">Send Email<span class="act-icon icon-ios-arrow-thin-right"></span></button>
+          <button type="submit" class="submit-contact" type="submit">
+            <span [hidden]="emailSent"><span>Send Email</span><span class="act-icon icon-ios-arrow-thin-right"></span></span>
+            <span [hidden]="!emailSent"><span class="act-icon icon-ios-checkmark-outline"></span><span>Email Sent Successfully</span></span>
+          </button>
         </div>
       </form>
     </div>
