--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -77,6 +77,14 @@
     transition: height 0.5s ease-out;
 }
 
+.menu-background {
+    position: fixed;
+    top: 59px;
+    width: 100%;
+    height: 100vh;
+    background: #06060638;
+}
+
 @-webkit-keyframes progress-bar {
     0% { width: 0; }
  }
@@ -231,6 +239,7 @@ h1.name {
     width: 80%;
     overflow: hidden;
     transition: height 0.5s;
+    z-index: 2;
 }
 .fix-header ul.site-nav-list {
     position: relative;
@@ -264,6 +273,7 @@ h1.name {
 }
 .show-menu .me-card-wrapper {
     height: 35em;
+    z-index: 1;
 }
 .show-menu .site-nav {
     height: 30em;
