--- a/src/styles.css
+++ b/src/styles.css
@@ -60,17 +60,16 @@ body::-webkit-scrollbar-thumb
     left: 0;
     right: 0;
     display: none;
+    border: 2px solid #ccc;
     border-top: 2px solid #454545;
-    border-right: 3px solid #454545;
-    border-bottom: 3px solid transparent;
     border-radius: 50%;
 }
 .loading-icon.animate {
     display: block;
     animation-name: spin;
-    animation-duration: 500ms;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    animation-timing-function: cubic-bezier(.47,.37,.3,.93);
 }
 @keyframes spin {
     from {
