--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -1,6 +1,6 @@
 <div class="main-header" [ngClass]="{'fix-header': isHeaderFix || showMenu, 'initial-header': isInitial, 'show-menu': showMenu, 'search-header': showSearch }">
     <div class="logo-menu center-stage">
-        <div class="menu-section" (click)="toggleMenu($event); $event.stopPropagation();">
+        <div class="menu-section" (click)="toggleMenu(); $event.stopPropagation();">
             <div class="menu-icon-top"></div>
             <div class="menu-icon"></div>
             <div class="menu-icon-bottom"></div>
@@ -32,7 +32,7 @@
                 <div class="dp my-dp">
                     <app-js-carousel [slideItems]=slideList [play]=play (carouselReady)="onCarouselReady($event)" (carouselLoading)="onCarouselLoadProgress($event)"></app-js-carousel>
                 </div>
-                <div class="my-card-wrapper" appJsOnscroll padding=60 [activateScroll]=activateScroll (onStateChange)="headerStateChange($event)">
+                <div class="my-card-wrapper" appJsOnscroll padding=60 [activateScroll]="activateScroll" (onStateChange)="headerStateChange($event)">
                     <div class="my-card">
                         <h1 class="name">Jayabratha Saha</h1>
                         <div class="title">Artist & Developer</div>
