Updating Database Rules and CSS Fix

--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -416,6 +416,7 @@ h1.name {
 .search-wrapper input {
     float: right;
     width: 0;
+    padding: 0;
     height: 38px;
     border: none;
     background: #f5f4f4;
